SERVER-74703 Replicating the dropDatabase oplog entry and clearing the collection catalog during dropDatabase is done atomically